# ffmpeg_decode

./: .gitignore  CMakeLists.txt  Frame2video.cpp  Frame2video.h  TestDecode.cpp  Video2frame.cpp  Video2frame.h  encode_video.cpp  filtering_video.c  main.cpp  my_transcoding.c  pipe_read.py  pull.cpp  push.cpp  show_frame_info.cpp  test.cpp  transcoding.c
source/: Decoder.cpp  Decoder.h  Demuxer.cpp  Demuxer.h  Encoder.cpp  Encoder.h  Frame.cpp  Frame.h  Muxer.cpp  Muxer.h  Packet.cpp  Packet.h  ffmpeg_headers.h  status.h
